Switch back to faltpickr cdn to prevent styling issues. Change .flatpickr-month to 30px height to avoid cutoff

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -799,6 +799,10 @@ body {
     display: block;
 }
 
+.flatpickr-month {
+    height: 33px;
+}
+
 label {
     color: #fff;
 }
